# LPR-WebAI

./: .gitignore  README.md  pyproject.toml  pytest.ini  Описание задачи.txt
src/: main.py
src/data/: test_data.csv
src/ml_scripts/: pick_regno.py
src/models/: models.py
tests/: conftest.py  test_api.py
