[tool.poetry]
name = "data-eng"
version = "1.0.0"
description = "ML Model Web Service for License Plate Recognition"
authors = ["Igornevertired"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
catboost = "^1.2.2"
pandas = "^2.1.3"
numpy = "^1.25.2"
pydantic = "^2.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
