[tool.poetry]
name = "data-eng"
version = "1.0.0"
description = "ML Model Web Service for License Plate Recognition"
authors = ["Igornevertired"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.5.0"
pandas = "^2.1.3"
catboost = "^1.2.2"
numpy = "^1.24.3"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pytest-cov = "^4.1.0"
httpx = "^0.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry-core.masonry.api"
